syntax = "proto3";
import "google/protobuf/empty.proto";
package my_no_sql_server_persistence;

message TableDescriptionGrpcModel {
    string TableName = 1;
    bool Persist =2;
    int32 MaxPartitionsAmount = 3;
}



message PersistGrpcEvent{
    uint64 TransactionId = 1;
    StartTransactionGrpcEvent StartTransaction = 2;
    InsertOrUpdateRowGrpcModel  InsertOrUpdateRow = 3;
    DeletePartitionGrpcModel DeletePartition = 4;
    DeleteRowGrpcModel DeleteRow = 5;
    UpdateTableAttributesGrpcModel UpdateTableAttributes = 6;
    bool Commit = 7;
}

message StartTransactionGrpcEvent{
    string TableName = 1;
    int64 PersistMoment = 2;
}

message InsertOrUpdateRowGrpcModel{
    string PartitionKey = 2;
    string RowKey = 3;
    string Data = 4;
}

message DeletePartitionGrpcModel{
    string PartitionKey = 2;
}

message DeleteRowGrpcModel{
    string PartitionKey = 1;
    string RowKey = 2;
}

message UpdateTableAttributesGrpcModel{
    uint64 Created = 1;
    bool Persist =2;
    optional uint64 MaxPartitionsAmount = 3;
    optional uint64 MaxRowsPerPartition = 4;
}



service MyNoSqlServerPersistenceGrpcService {
    rpc GetTables(google.protobuf.Empty) returns (stream TableDescriptionGrpcModel);
    rpc PersistEvents(stream PersistGrpcEvent) returns (google.protobuf.Empty);
    rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty);
}